--- a/1animalesplantas.html
+++ b/1animalesplantas.html
@@ -54,15 +54,15 @@
 		 <td height="32" colspan="6" bgcolor="#9CEDEA"><center><h2>Animales y Plantas</h2></center></td>
 	</tr>
     <tr>
-		<td width="166" height="166" bgcolor="#DAF9F8"><center><img src="imagenes/digital1/9.jpg" alt="Imagen" width="366" height="366"></center></td>
-		<td width="166" bgcolor="#FFFFFF"><center><img src="imagenes/digital1/colibri.jpg" alt="Imagen" width="366" height="366"></center></td>
-		<td width="166" bgcolor="#DAF9F8"><center><img src="imagenes/digital1/flor.jpg" alt="Imagen" width="366" height="366"></center></td>
-		<td width="166" bgcolor="#FFFFFF"><center><img src="imagenes/digital1/flores.jpg" alt="Imagen" width="366" height="366"></center></td>
+		<td width="166" height="166" bgcolor="#DAF9F8"><center><img src="9.jpg" alt="Imagen" width="366" height="366"></center></td>
+		<td width="166" bgcolor="#FFFFFF"><center><img src="colibri.jpg" alt="Imagen" width="366" height="366"></center></td>
+		<td width="166" bgcolor="#DAF9F8"><center><img src="flor.jpg" alt="Imagen" width="366" height="366"></center></td>
+		<td width="166" bgcolor="#FFFFFF"><center><img src="flores.jpg" alt="Imagen" width="366" height="366"></center></td>
 	</tr>
 	<tr>
-        <td height="166" bgcolor="#FFFFFF"><center><img src="imagenes/digital1/pajaros.jpg" alt="Imagen" width="366" height="366"></center></td>
-		<td bgcolor="#DAF9F8"><center><img src="imagenes/digital1/pulpo.jpg" alt="Imagen" width="312" height="366"></center></td>
-		<td bgcolor="#FFFFFF"><center><img src="imagenes/digital1/planta.jpg" alt="Imagen" width="366" height="366"></center></td>
+        <td height="166" bgcolor="#FFFFFF"><center><img src="pajaros.jpg" alt="Imagen" width="366" height="366"></center></td>
+		<td bgcolor="#DAF9F8"><center><img src="pulpo.jpg" alt="Imagen" width="312" height="366"></center></td>
+		<td bgcolor="#FFFFFF"><center><img src="planta.jpg" alt="Imagen" width="366" height="366"></center></td>
 		<td bgcolor="#DAF9F8"><center></center></td>
 		
 	</tr>
