--- a/1chicas.html
+++ b/1chicas.html
@@ -54,23 +54,23 @@
 		 <td height="32" colspan="6" bgcolor="#9CEDEA"><center><h2>Chicas Anime</h2></center></td>
 	</tr>
     <tr>
-		<td width="166" height="166" bgcolor="#DAF9F8"><center><img src="imagenes/digital3/chicas.jpg" alt="Imagen" width="330" height="441"></center></td>
-		<td width="166" bgcolor="#FFFFFF"><center><img src="imagenes/digital3/gritando.jpg" alt="Imagen" width="309" height="441"></center></td>
-		<td width="166" bgcolor="#DAF9F8"><center><img src="imagenes/digital3/1.jpg" alt="Imagen" width="250" height="441"></center></td>
-		<td width="166" bgcolor="#FFFFFF"><center><img src="imagenes/digital3/llora.png" alt="Imagen" width="330" height="441"></center></td>
+		<td width="166" height="166" bgcolor="#DAF9F8"><center><img src="chicas.jpg" alt="Imagen" width="330" height="441"></center></td>
+		<td width="166" bgcolor="#FFFFFF"><center><img src="gritando.jpg" alt="Imagen" width="309" height="441"></center></td>
+		<td width="166" bgcolor="#DAF9F8"><center><img src="1.jpg" alt="Imagen" width="250" height="441"></center></td>
+		<td width="166" bgcolor="#FFFFFF"><center><img src="llora.png" alt="Imagen" width="330" height="441"></center></td>
 	</tr>
 	<tr>
-		<td height="166" bgcolor="#FFFFFF"><center><img src="imagenes/digital3/2.jpg" alt="Imagen" width="330" height="268"></center></td>
-		<td bgcolor="#DAF9F8"><center><img src="imagenes/digital3/3.jpg" alt="Imagen" width="330" height="319"></center></td>
-		<td bgcolor="#FFFFFF"><center><img src="imagenes/digital3/6.jpg" alt="Imagen" width="330" height="441"></center></td>
-		<td bgcolor="#DAF9F8"><center><img src="imagenes/digital3/8.jpg" alt="Imagen" width="330" height="441"></center></td>
+		<td height="166" bgcolor="#FFFFFF"><center><img src="2.jpg" alt="Imagen" width="330" height="268"></center></td>
+		<td bgcolor="#DAF9F8"><center><img src="3.jpg" alt="Imagen" width="330" height="319"></center></td>
+		<td bgcolor="#FFFFFF"><center><img src="6.jpg" alt="Imagen" width="330" height="441"></center></td>
+		<td bgcolor="#DAF9F8"><center><img src="8.jpg" alt="Imagen" width="330" height="441"></center></td>
 		
 	</tr>
 	<tr>
-		<td height="166" bgcolor="#DAF9F8"><center><img src="imagenes/digital3/4.jpg" alt="Imagen" width="330" height="441"></center></td>
-		<td bgcolor="#FFFFFF"><center><img src="imagenes/digital3/5.jpg" alt="Imagen" width="290" height="441"></center></td>
-		<td bgcolor="#DAF9F8"><center><img src="imagenes/digital3/7.jpg" alt="Imagen" width="299" height="441"></center></td>
-		<td bgcolor="#FFFFFF"><center><img src="imagenes/digital3/9.jpg" alt="Imagen" width="304" height="441"></center></td>
+		<td height="166" bgcolor="#DAF9F8"><center><img src="4.jpg" alt="Imagen" width="330" height="441"></center></td>
+		<td bgcolor="#FFFFFF"><center><img src="5.jpg" alt="Imagen" width="290" height="441"></center></td>
+		<td bgcolor="#DAF9F8"><center><img src="7.jpg" alt="Imagen" width="299" height="441"></center></td>
+		<td bgcolor="#FFFFFF"><center><img src="9.jpg" alt="Imagen" width="304" height="441"></center></td>
 	</tr>
 	<tr>
 		<td height="166" bgcolor="#FFFFFF"><center><img src="imagenes/digital3/m.jpg" alt="Imagen" width="264" height="441"></center></td>
